--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,7 @@ body {
 .filter-button .title {
   font-weight: 500;
   margin-right: 8px;
+  color: #000000; /* Warna teks default */
 }
 
 .filter-button .divider {
@@ -264,17 +265,22 @@ body {
 
 /* Active state */
 .filter-button.active {
-  background-color: #000000;
-  color: white;
-  border: none;
+  background-color: #000000 !important;
+  color: white !important;
+  border-radius: 24px !important;
+  border: 1px solid #000000 !important;
+}
+
+.filter-button.active .title {
+  color: #ffffff !important;
 }
 
 .filter-button.active .total {
-  color: #B3B3B3;
+  color: #B3B3B3 !important;
 }
 
 .filter-button.active .divider {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.3) !important;
   /* White with transparency */
 }
 
@@ -515,4 +521,5 @@ body {
 /* Make the grid align skeletons just like it aligns real cards */
 .grid-container.skeleton {
   grid-template-columns: repeat(auto-fit, minmax(162px, 1fr));
+  grid-gap: 8px;
 }
